Edit sql script to put the date of the games in string, Update team OK
