# services/officialLeague/src/main/resources/api-spec.yaml
@@ -59,13 +59,36 @@ paths:
         - application/json
       responses:
         '200':
-          description: team retrieved successfully
+          description: Team retrieved successfully
           schema:
             $ref: '#/definitions/Team'
         '403':
-          description: forbidden
+          description: Forbidden
         '404':
           description: team not found
+
+    put:
+      description: Update a team by id
+      operationId: updateTeamById
+      consumes:
+        - application/json
+      parameters:
+        - name: teamId
+          in: path
+          required: true
+          type: integer
+        - name: team
+          in: body
+          required: true
+          schema:
+              $ref: '#/definitions/TeamDTO'
+      responses:
+        '204':
+          description: Team updated successfully
+        '403':
+          description: Forbidden
+        '404':
+          description: Team not found
 
     delete:
       description: Delete a team by id
